--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-icons": "^5.3.0",
     "react-loading-skeleton": "^3.4.0",
     "react-router-dom": "^6.26.2",
+    "react-toastify": "^10.0.5",
+    "toastify-js": "^1.12.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
